2010-11-19 [paul]	1.0.1

	* initial release!

2010-11-19 [paul]	1.0.0cvs4

	* configure.ac
	* po/ca.po
	* po/cs.po
	* po/fr.po
	* po/hu.po
	* po/id.po
	* po/pt_BR.po
	* po/sk.po
	* po/uk.po
		added by Miquel Oliete, David Vachulka,wwp, Pader Rezso,
		MSulchan Darmawan, Frederico Goncalves Guimaraes, Slavko,
		Yarema

2010-11-16 [mones]	1.0.0cvs3

	* src/address_keeper.c
		Fix crashes with nameless and invalid addresses
		Fix declarations portability issues
		Thanks wwp for hints and testing ;-)

2010-11-15 [wwp]	1.0.0cvs2

	* po/.cvsignore
		Add one .cvsignore filter more.

2010-11-15 [wwp]	1.0.0cvs1

	* .cvsignore
	* config/.cvsignore
	* src/.cvsignore
	  Add .cvsignore filters.

2010-11-15 [mones]	1.0.0

	* First upload to CVS

2010-10-04 [mones]	0.0.1

	* Initial import